--- a/docs/SCMA470Bookdownproj.tex
+++ b/docs/SCMA470Bookdownproj.tex
@@ -128,7 +128,7 @@
 
 \title{\textbf{SCMA 470 : Risk Analysis and Credibility} \textbf{Tutorial 3}}
 \author{Pairote Satiracoo}
-\date{2021-09-24}
+\date{2021-09-25}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -3484,6 +3484,139 @@ Substituting all the parameter values and \(\mathrm{E}[Y_I] = 160\), we solve fo
     expected insurer's payout.
   \end{enumerate}
 \end{enumerate}
+
+\hypertarget{solutions-to-tutorial-3}{%
+\section{Solutions to Tutorial 3}\label{solutions-to-tutorial-3}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \tightlist
+  \item
+    The aggregate claims \(S\) have a compound Poisson random variable, \(S \sim \mathcal{CP}(\lambda, F_X)\) with \(\lambda = 20\) and \(X \sim \mathcal{G}(\alpha,\beta) = \mathcal{G}(2,1)\) distribution.
+    From \(\mathrm{Sk}[S] = \frac{\lambda m_3}{(\lambda m_2)^{3/2}}\) with \(m_r = \mathrm{E}[X^r]\), we also have
+  \end{enumerate}
+\end{enumerate}
+
+\[\mathrm{E}[X^r] = \frac{1}{\beta^r} \frac{\Gamma(\alpha + r)}{\Gamma(\alpha )}, \quad r > 0.\]
+
+Note that if \(\alpha\) is an integer, then \(\Gamma(\alpha) = (\alpha-1)!\).
+
+Substituting all the parameter values, we have
+\(\mathrm{E}[X^2] = 6\), \(\mathrm{E}[X^3] = 24\) and \(\mathrm{Sk}[S] = 0.3651484\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  \(S_1 \sim \mathcal{CP}(\lambda, F_1)\) and \(S_2 \sim \mathcal{CP}(\lambda, F_2)\) are independent compound Poisson random variables with claim sizes exponential distributions for \(S_i\), \(\text{Exp}(1/\mu_i)\) where \(\mu_1 = 1\) and \(\mu_2 = 2\).
+
+  By the additivity of independent compound Poisson
+  distributions, the distribution of \(S = S_1 + S_2\) is \(\mathcal{CP}(\lambda, F_X)\), where
+  \[ F_X(x) = \frac{10}{40} F_1(x) + \frac{30}{40} F_2(x) = \frac{1}{4}(1 - e^{-x}) + \frac{3}{4} (1 - e^{-x/2}).\]
+  It is the mixture of exponential distribution with mean 1 and 2.
+\item
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \tightlist
+  \item
+    From \(N \sim \mathcal{NB}(1, p)\) and \(X \sim \text{Exp}(\mu)\), the moment generating functions of
+    \(N\) and \(X\) are
+    \[ M_N(t) = \frac{p}{1-q e^t}, \quad M_X(t) = \frac{1}{1 - \mu t},\]
+    where \(q = 1- p\).
+  \end{enumerate}
+
+  Therefore,
+  \[\begin{aligned}
+  M_S(t) &= M_N(\log(M_X(t))) \\
+  &=  \frac{p}{1-q M_X(t)} \\
+  &= p + q\frac{1}{1- \frac{\mu}{p}t}
+  \end{aligned}.\]
+
+  This distribution can be regarded as a mixture of a distribution with moment generating function 1 and a mixture of a distribution with moment generating function \((1- \frac{\mu}{p}t)^{-1}\), i.e.~the moment generating function of an exponential random variable with mean \(\mu/p\).
+
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \setcounter{enumii}{1}
+  \tightlist
+  \item
+    Applying the properties of the moment generating function, \(M_S^{(k)}(0) = \mathrm{E}[X^k]\).
+  \end{enumerate}
+
+  It follows that
+  \[ \frac{d}{dt} M_S(t) = \frac{p q \mu}{(p - \mu t)^2}, \quad \mathrm{E}[S] = \frac{q \mu}{p}\]
+  and
+  \[ \frac{d^2}{dt^2} M_S(t) = \frac{2 p q \mu^2}{(p - \mu t)^3}, \quad \mathrm{E}[S^2] = \frac{2 q \mu^2}{p^2}.\]
+  Therefore, \[\mathrm{Var}[S] = \mathrm{E}[S^2] - (\mathrm{E}[S])^2 = \frac{2 q \mu^2}{p^2} - \left(\frac{q \mu}{p}\right)^2  = \frac{q(2-q)\mu^2}{p^2}.\]
+
+  Alternatively, the mean and variance of the aggregate claims for this time period can be calculated from the properties of a compound negative distribution (with k = 1),
+  \[\mathrm{E}[S] = \frac{q}{p} \mathrm{E}[X] = \frac{q \mu}{p},\]
+  and
+  \[\mathrm{Var}[S] = \frac{q}{p^2}(p \mathrm{E}[X^2] + q (\mathrm{E}[X])^2)  = \frac{q}{p^2} (p (2\mu^2) + q \mu^2) = \frac{q(2-q)\mu^2}{p^2}.\]
+\item
+  Let \(Y\) be the aggregate claims paid by the insurer of 60 policies with a deductible of 10 and policy limit of 125. Then, \(Y \sim \mathcal{CP}(60 \times 0.02, F_X)\), where \(X\) is the individual claim amount paid by the insurer. The distribution of \(X\) is
+\end{enumerate}
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+x & 40 & 125 \\
+\midrule
+\endhead
+\(\Pr(X = x)\) & 1/3 & 2/3 \\
+\bottomrule
+\end{longtable}
+
+Hence, \(\mathrm{E}[X] = 290/3\) and \(\mathrm{E}[Y] = 116\).
+
+Let \(U\) be the aggregate claims paid by the insurer of 40 policies with a deductible of 0 and policy limit of 125. Then, \(U \sim \mathcal{CP}(40 \times 0.02, F_{X'})\), where \(X'\) is the individual claim amount paid by the insurer. The distribution of \(X'\) is
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+x & 50 & 125 \\
+\midrule
+\endhead
+\(\Pr(X' = x)\) & 1/3 & 2/3 \\
+\bottomrule
+\end{longtable}
+
+Hence, \(\mathrm{E}[X] = 100\) and \(\mathrm{E}[U] = 80\). The total expected total claim payout of the insurer is \(116 + 80 = 196\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{4}
+\item
+  \begin{enumerate}
+  \def\labelenumii{\arabic{enumii}.}
+  \tightlist
+  \item
+    The number of claims \(N\) per a fixed time period has the following
+    distribution:
+    \[\Pr(N = 0) = 0.5, \Pr(N = 1) = 0.3, \Pr(N = 2) = 0.1, \text{ and } \Pr(N = 3) = 0.1.\]
+    Then, \(\mathrm{E}[N] = 0.8\) and \(\mathrm{Var}[N] = 0.96\).
+  \end{enumerate}
+\end{enumerate}
+
+The loss distribution is uniformly distributed \(X \sim \mathcal{U}(0,100)\). Then,
+Then, \(\mathrm{E}[X] = 50\) and \(\mathrm{E}[X^2] = 3333.3333333\).
+
+The mean and variance of the aggregate claims for this fixed time period.
+\[ \mathrm{E}[S] =  \mathrm{E}[N] \mathrm{E}[X] = 40 \]
+and
+\[ \mathrm{Var}[S] =  \mathrm{E}[N] (\mathrm{E}[X^2] - (\mathrm{E}[X])^2  ) + \mathrm{Var}[N] (\mathrm{E}[X])^2  = 3066.6666667 .\]
+
+\begin{verbatim}
+2.  Suppose that a policy deductible of 20 is in place. Then
+\end{verbatim}
+
+\[\begin{aligned}
+\mathrm{E}[\max(0, X - 20)] &= \int_{20}^{100} (x - 20) \frac{1}{100} \, dx\\
+&= 32.
+\end{aligned}\]
+
+Therefore, the expected insurer's payout is
+\[ \mathrm{E}[N]\mathrm{E}[\max(0, X - 20)] = (0.8)(32) = 25.6. \]
 
 \hypertarget{tutorial-4}{%
 \section{Tutorial 4}\label{tutorial-4}}
